test_suite5/ALAN/test_suite/alan-2022-examples/failing/001050_mutation.alan
source cOK begin boolean L_ do; relax end
